apps/cli/src/snapshots/costroid__render__tests__snapshot_frontier_braille.snap
---
source: apps/cli/src/render.rs
expression: "render_frontier(&used_gpt(), RenderOptions::braille(true))"
---
[1;38;5;154mC⠉[0m [1mcost[0m[38;5;245mroid[0m                             [38;5;245mcost vs quality[0m  [1m~$35.00[0m
────────────────────────────────────────────────────────────────
DeepSWE — primary (neutral)   as of 2026-05-30
  neutral mini-swe-agent harness, not your tool; avg cost/task is cache-miss priced (~5x overstated) - indicative
  source: https://deepswe.datacurve.ai
  ⠀⠀⠀⣿⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
  ⠀⠀⢰⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
  ⠀⠀⡎⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠠
  ⠀⡸⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
  ⢀⠇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
  ⣿⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
  x: cost/task ->   y: score (high = top)
  gpt-5.5  70% @ ~$6.61  on frontier
  claude-opus-4.7  54% @ ~$18.19  off (dominated by gpt-5.5)
  claude-sonnet-4.6  32% @ ~$5.52  on frontier
────────────────────────────────────────────────────────────────
CursorBench v3.1 — corroborating (vendor)   as of 2026-05-18
  vendor benchmark - Cursor's own private, non-reproducible tasks, showcases Composer; cost is cache-aware (each model's published per-token pricing incl. cache reads, applied to tokens used, then averaged) - sound; the caveat is provenance, not cost
  source: https://cursor.com/cursorbench
  ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣀⣀⣀⣀⠤⠤⠤⠔⠒⠒⠒⠉⣿
  ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣿⣀⡠⠤⠤⠤⠒⠒⠒⠊⠉⠉⠉⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
  ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⡠⠔⠊⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
  ⠀⠀⠀⠀⠀⠀⠀⣀⠤⠒⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
  ⠀⠀⠀⢀⡠⠒⠉⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
  ⣿⠔⠊⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
  x: cost/task ->   y: score (high = top)
  Composer 2.5  63.2% @ ~$0.55  on frontier  — Cursor subscription only - no API access
  Opus 4.7 Max  64.8% @ ~$11.02  on frontier
  GPT-5.5 Extra High  64.3% @ ~$4.37  on frontier
────────────────────────────────────────────────────────────────
your models (API-billed):
  gpt-5.5  spent [1m~$35.00[0m; claude-sonnet-4-6 costs about ~$17.00 less at equal volume
────────────────────────────────────────────────────────────────
◆ gpt-5.5 drove most of your API spend; claude-sonnet-4-6 sits cheaper on the frontier at equal volume. (estimated)
no providers detected
looked for Claude Code, Codex, and Cursor local logs under the usual home/config dirs.
under WSL, Costroid also checks Windows paths like /mnt/c/Users/<you>/...
set CLAUDE_CONFIG_DIR or CODEX_HOME if your logs live elsewhere.
