apps/cli/src/snapshots/costroid__render__tests__snapshot_frontier_plain.snap
---
source: apps/cli/src/render.rs
expression: "render_frontier(&used_gpt(), RenderOptions::plain())"
---
costroid frontier
DeepSWE v1.1 - primary (neutral), source https://deepswe.datacurve.ai, as of 2026-06-14
  caveat: neutral mini-swe-agent harness (not your tool); v1.1 grades only the committed patch in an isolated container - reproducible; avg cost/task uses the board's own undisclosed token pricing - indicative, not cache-correct
  claude-fable-5: score 70%, cost ~$21.63/task, on frontier: yes, your API spend: none -- tops the board; no pricing-catalog entry - plotted by score + board cost, not re-priced
  gpt-5.5: score 67%, cost ~$7.23/task, on frontier: yes, your API spend: ~$35.00
  claude-opus-4.8: score 59%, cost ~$13.22/task, on frontier: no (dominated by gpt-5.5), your API spend: none
  gpt-5.4: score 52%, cost ~$5.65/task, on frontier: yes, your API spend: none
  claude-sonnet-4.6: score 30%, cost ~$5.52/task, on frontier: yes, your API spend: none
CursorBench v3.1 - corroborating (vendor), source https://cursor.com/cursorbench, as of 2026-05-18
  caveat: vendor benchmark - Cursor's own private, non-reproducible tasks, showcases Composer; cost is cache-aware (each model's published per-token pricing incl. cache reads, applied to tokens used, then averaged) - sound; the caveat is provenance, not cost
  Composer 2.5: score 63.2%, cost ~$0.55/task, on frontier: yes, your API spend: none -- Cursor subscription only - no API access
  Opus 4.7 Max: score 64.8%, cost ~$11.02/task, on frontier: yes, your API spend: none
  GPT-5.5 Extra High: score 64.3%, cost ~$4.37/task, on frontier: yes, your API spend: ~$35.00
your models (API-billed):
  gpt-5.5: spent ~$35.00; gpt-5.4 costs about ~$17.50 less at equal volume
insight: gpt-5.5 drove most of your API spend; gpt-5.4 sits cheaper on the frontier at equal volume. (estimated)
no providers detected
looked for Claude Code, Codex, and Cursor local logs under the usual home/config dirs.
under WSL, Costroid also checks Windows paths like /mnt/c/Users/<you>/...
set CLAUDE_CONFIG_DIR or CODEX_HOME if your logs live elsewhere.
