apps/cli/src/snapshots/costroid__render__tests__snapshot_frontier_plain_no_api.snap
---
source: apps/cli/src/render.rs
expression: "render_frontier(&bench_view_for(&[]), RenderOptions::plain())"
---
costroid frontier
DeepSWE — primary (neutral), source https://deepswe.datacurve.ai, as of 2026-05-30
  caveat: neutral mini-swe-agent harness, not your tool; avg cost/task is cache-miss priced (~5x overstated) - indicative
  gpt-5.5: score 70%, cost ~$6.61/task, on frontier: yes, your API spend: none
  claude-opus-4.7: score 54%, cost ~$18.19/task, on frontier: no (dominated by gpt-5.5), your API spend: none
  claude-sonnet-4.6: score 32%, cost ~$5.52/task, on frontier: yes, your API spend: none
CursorBench v3.1 — corroborating (vendor), source https://cursor.com/cursorbench, as of 2026-05-18
  caveat: vendor benchmark - Cursor's own private, non-reproducible tasks, showcases Composer; cost is cache-aware (each model's published per-token pricing incl. cache reads, applied to tokens used, then averaged) - sound; the caveat is provenance, not cost
  Composer 2.5: score 63.2%, cost ~$0.55/task, on frontier: yes, your API spend: none — Cursor subscription only - no API access
  Opus 4.7 Max: score 64.8%, cost ~$11.02/task, on frontier: yes, your API spend: none
  GPT-5.5 Extra High: score 64.3%, cost ~$4.37/task, on frontier: yes, your API spend: none
your models: no API-billed usage to compare
insight: no API-billed usage to compare against the frontier. (estimated)
no providers detected
looked for Claude Code, Codex, and Cursor local logs under the usual home/config dirs.
under WSL, Costroid also checks Windows paths like /mnt/c/Users/<you>/...
set CLAUDE_CONFIG_DIR or CODEX_HOME if your logs live elsewhere.
