apps/cli/src/snapshots/costroid__render__tests__snapshot_history_empty.snap
---
source: apps/cli/src/render.rs
expression: "render_history(&[], RenderOptions::plain())"
---
costroid history
scope: 0 records, newest first (all time)
export: costroid export --format json|csv  (full FOCUS 1.3 record)
no usage recorded yet
