apps/cli/src/snapshots/costroid__render__tests__snapshot_models_no_api_usage.snap
---
source: apps/cli/src/render.rs
expression: "render_models(&empty_models_view(), RenderOptions::plain())"
---
costroid models
scope: all usage (all time)
no API-billed usage to compare
~ cost-only comparison at equal token volume; not a quality claim. (pricing as of 2026-05-01)
no providers detected
looked for Claude Code, Codex, and Cursor local logs under the usual home/config dirs.
under WSL, Costroid also checks Windows paths like /mnt/c/Users/<you>/...
set CLAUDE_CONFIG_DIR or CODEX_HOME if your logs live elsewhere.
