apps/cli/src/snapshots/costroid__render__tests__snapshot_models_plain.snap
---
source: apps/cli/src/render.rs
expression: "render_models(&models_view_fixture(), RenderOptions::plain())"
---
costroid models
scope: all usage (all time)
gpt-5.5: spent ~$12.34
  tokens: 10 in / 20 out / 30 cache
  frontier: swe-bench 72% - on frontier
  claude-haiku-4 costs about ~$4.00 less at equal volume
claude-opus-4: spent ~$8.80 (partial pricing)
  tokens: 10 in / 20 out / 30 cache
  frontier: swe-bench 70% - off (dominated by gpt-5.5)
mystery-model: spent ~$2.10
  tokens: 10 in / 20 out / 30 cache
  frontier: not benchmarked
~ cost-only comparison at equal token volume; not a quality claim. (pricing as of 2026-05-01)
no providers detected
looked for Claude Code, Codex, and Cursor local logs under the usual home/config dirs.
under WSL, Costroid also checks Windows paths like /mnt/c/Users/<you>/...
set CLAUDE_CONFIG_DIR or CODEX_HOME if your logs live elsewhere.
